--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.13.0",
   "dependencies": {
     "ember.js": "1.0.0-rc.6",
-    "ember-data": "610cfeced7921e244797ae9e2d1e37acbfd9e581"
+    "ember-data": "~1.0.0-beta.6"
   },
   "ignore": [
     "**/.*",
