--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "ember-data-tastypie-adapter",
   "version": "0.13.0",
   "dependencies": {
-    "ember.js": "~1.3.1",
+    "ember": "~1.3.2",
     "ember-data": "~1.0.0-beta.6"
   },
   "ignore": [
