Update build system to use Broccoli Tests are now handled by testem, removed symlinks and vendor modules from tests directory.
One tests is failing, fixed in next commit.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
 syntax: glob
 
+.bundle
+bundle
+tmp/
+tests/source/
+dist/
+
+docs/build/
+docs/node_modules/
+
+bower_components/
+node_modules/
+
 Gemfile.lock
 dist
 tmp
