--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,16 @@
 {
   "name": "ember-data-tastypie-adapter",
   "version": "0.13.0",
+  "private": true,
   "dependencies": {
-    "ember": "~1.3.2",
-    "ember-data": "~1.0.0-beta.6"
+    "ember": "~1.7.0",
+    "ember-data": "1.0.0-beta.8"
   },
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "components",
-    "bower_components",
-    "test",
-    "tests"
-  ]
+  "devDependencies": {
+    "qunit": "~1.13.0",
+    "jquery": "~1.10.x",
+    "loader.js": "~1.0.0",
+    "ember-inflector": "https://github.com/stefanpenner/ember-inflector.git#v1.1.0",
+    "es5-shim": "~4.0.3"
+  }
 }
