--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "bower": "~1.3",
     "broccoli": "^0.13.2",
+    "broccoli-cli": "0.0.1",
     "broccoli-concat": "0.0.7",
     "broccoli-defeatureify": "^0.3.0",
     "broccoli-env": "0.0.1",
