Test hack for travis, copied ember-data-tastypie-adapter from global to dist

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@ language: node_js
 node_js:
   - "0.10"
 install:
+- "rm -r dist"
 - "npm install"
 - "bower install"
-- "rm -r dist"
 - "npm run-script dist"
+- "cp dist/global/ember-data-tastypie-adapter.js dist/"
 script:
   - npm run-script test
 env:
