--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,17 @@
 {
   "name": "ember-data-tastypie-adapter",
-  "version": "0.15.0",
-  "private": true,
   "dependencies": {
-    "ember": "~1.9.1",
-    "ember-data": "1.0.0-beta.14"
+    "handlebars": "~1.3.0",
+    "jquery": "^1.11.1",
+    "ember": "1.8.1",
+    "ember-data": "1.0.0-beta.12",
+    "ember-resolver": "~0.1.11",
+    "loader.js": "ember-cli/loader.js#1.0.1",
+    "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
+    "ember-cli-test-loader": "rwjblue/ember-cli-test-loader#0.0.4",
+    "ember-load-initializers": "ember-cli/ember-load-initializers#0.0.2",
+    "ember-qunit": "0.1.8",
+    "ember-qunit-notifications": "0.0.4",
+    "qunit": "~1.15.0"
   },
-  "devDependencies": {
-    "qunit": "~1.13.0",
-    "jquery": "~1.10.x",
-    "loader.js": "~1.0.0",
-    "ember-inflector": "https://github.com/stefanpenner/ember-inflector.git#v1.1.0",
-    "es5-shim": "~4.0.3"
-  }
 }
