--- a/package.json
+++ b/package.json
@@ -1,42 +1,45 @@
 {
   "name": "ember-data-tastypie-adapter",
-  "version": "0.15.0",
-  "license": "MIT",
-  "namespace": "DS",
-  "repository": "git://github.com/escalant3/ember-data-tastypie-adapter.git",
+  "version": "0.16.0",
   "description": "Django Tastypie Adapter",
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
+  },
+  "scripts": {
+    "start": "ember server",
+    "build": "ember build",
+    "test": "ember test"
+  },
+  "repository": "git://github.com/escalant3/ember-data-tastypie-adapter.git",
+  "engines": {
+    "node": ">= 0.10.0"
+  },
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "broccoli-asset-rev": "^2.0.0",
+    "broccoli-ember-hbs-template-compiler": "^1.6.1",
+    "ember-cli": "0.1.6",
+    "ember-cli-content-security-policy": "0.3.0",
+    "ember-cli-dependency-checker": "0.0.7",
+    "ember-cli-esnext": "0.1.1",
+    "ember-cli-ic-ajax": "0.1.1",
+    "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-qunit": "0.1.2",
+    "ember-data": "1.0.0-beta.12",
+    "ember-export-application-global": "^1.0.0",
+    "express": "^4.8.5",
+    "glob": "^4.0.5"
+  },
   "keywords": [
+    "ember-addon",
     "ember-data",
     "tastypie",
     "django",
     "adapter"
   ],
-  "scripts": {
-    "test": "testem -R dot ci",
-    "dist": "broccoli build dist"
-  },
-  "devDependencies": {
-    "bower": "~1.3",
-    "broccoli": "^0.13.2",
-    "broccoli-cli": "0.0.1",
-    "broccoli-concat": "0.0.7",
-    "broccoli-defeatureify": "^0.3.0",
-    "broccoli-env": "0.0.1",
-    "broccoli-es3-safe-recast": "0.0.8",
-    "broccoli-es6-module-transpiler": "^0.1.1",
-    "broccoli-es6-transpiler": "^0.1.0",
-    "broccoli-file-mover": "~0.2.0",
-    "broccoli-jshint": "^0.5.1",
-    "broccoli-merge-trees": "^0.1.4",
-    "broccoli-render-template": "0.0.3",
-    "broccoli-static-compiler": "^0.1.4",
-    "broccoli-string-replace": "0.0.2",
-    "broccoli-uglify-js": "^0.1.3",
-    "broccoli-wrap": "0.0.2",
-    "broccoli-yuidoc": "^1.3.0",
-    "defeatureify": "~0.1.4",
-    "ejs": "^1.0.0",
-    "testem": "^0.6.19",
-    "yuidocjs": "~0.3.46"
+  "ember-addon": {
+    "configPath": "tests/dummy/config"
   }
 }
