--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,17 @@
-syntax: glob
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-.bundle
-bundle
-tmp/
-tests/source/
+# compiled output
+/dist
+/tmp
 
-docs/build/
-docs/node_modules/
+# dependencies
+/node_modules
+/bower_components
 
-bower_components/
-node_modules/
-
-Gemfile.lock
-tmp
-*swp
-
+# misc
+/.sass-cache
+/connect.lock
+/coverage/*
+/libpeerconnection.log
 npm-debug.log
-dist/tests/
+testem.log
