--- a/bower.json
+++ b/bower.json
@@ -8,10 +8,12 @@
     "ember-resolver": "~0.1.11",
     "loader.js": "ember-cli/loader.js#1.0.1",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
-    "ember-cli-test-loader": "rwjblue/ember-cli-test-loader#0.0.4",
-    "ember-load-initializers": "ember-cli/ember-load-initializers#0.0.2",
-    "ember-qunit": "0.1.8",
-    "ember-qunit-notifications": "0.0.4",
-    "qunit": "~1.15.0"
+    "ember-cli-test-loader": "rwjblue/ember-cli-test-loader#0.1.1",
+    "ember-load-initializers": "ember-cli/ember-load-initializers#0.0.2"
+  },
+  "devDependencies": {
+    "ember-qunit": "0.2.8",
+    "ember-qunit-notifications": "0.0.7",
+    "qunit": "~1.17.1"
   }
 }
