--- a/tests/.jshintrc
+++ b/tests/.jshintrc
@@ -21,7 +21,9 @@
     "andThen",
     "currentURL",
     "currentPath",
-    "currentRouteName"
+    "currentRouteName",
+    "start",
+    "stop"
   ],
   "node": false,
   "browser": false,
