--- a/bower.json
+++ b/bower.json
@@ -12,5 +12,8 @@
     "ember-qunit": "0.3.0",
     "ember-qunit-notifications": "0.0.7",
     "qunit": "~1.17.1"
+  },
+  "devDependencies": {
+    "jquery-mockjax": "~1.6.1"
   }
 }
